re PR tree-optimization/78496 (Missed opportunities for jump threading)

PR tree-optimization/78496
	* tree-vrp.c (simplify_cond_using_ranges_1): Renamed
	from simplify_cond_using_ranges.  Split off code to walk
	backwards through casts into ...
	(simplify_cond_using_ranges_2): New function.
	(simplify_stmt_using_ranges): Call simplify_cond_using_ranges_1.
	(execute_vrp): After identifying jump threads, call
	simplify_cond_using_ranges_2.

	PR tree-optimization/78496
	* gcc.dg/tree-ssa/ssa-thread-15.c: New test.

From-SVN: r247556