gcc/testsuite/gcc.dg/tree-ssa/20030922-2.c
@@ -20,6 +20,4 @@ rgn_rank (rtx insn1, rtx insn2)
 }
 
 /* There should be two IF conditionals.  */
-/* We no longer record the conditional equivalence by design, thus we
-   are unable to simplify the 3rd conditional at compile time.  */
-/* { dg-final { scan-tree-dump-times "if " 2 "dom2" { xfail *-*-* } } } */
+/* { dg-final { scan-tree-dump-times "if " 2 "dom2" } } */
